--- a/src/pages/theater-styles.css
+++ b/src/pages/theater-styles.css
@@ -1,4 +1,4 @@
-.month-container {
+.theater .month-container {
 	flex: 1;
 	display: flex;
 	align-items: center;
@@ -6,11 +6,11 @@
 	height: 100%;
 }
 
-.rbc-calendar {
+.theater .rbc-calendar {
 	height: 100%;
 }
 
-.calendar-container {
+.theater .calendar-container {
 	height: 100vh;
 	background-color: #2a2727;
 	padding: 20px;
@@ -21,14 +21,14 @@
 }
 
 
-.custom-toolbar {
+.theater .custom-toolbar {
 	display: flex;
 	justify-content: right;
 	align-items: center;
 	padding: 10px 0;
 }
 
-.input-container {
+.theater .input-container {
 	position: relative;
 	display: flex;
 	align-items: center;
@@ -36,7 +36,7 @@
 	margin-right: 10vw;
 }
 
-.search-icon {
+.theater .search-icon {
 	position: absolute;
 	left: 10px;
 	color: lightgray;
@@ -44,7 +44,7 @@
 	/* Prevent the icon from blocking input interaction */
 }
 
-.search-input {
+.theater .search-input {
 	border: 1px solid lightgray;
 	border-radius: 20px;
 	font-size: 16px;
@@ -54,35 +54,35 @@
 	outline: none;
 }
 
-.rbc-button-link {
+.theater .rbc-button-link {
 	color: #faff00 !important;
 	font-weight: bold !important;
 	cursor: default !important;
 }
 
-.rbc-off-range-bg {
+.theater .rbc-off-range-bg {
 	background-color: inherit !important;
 }
 
-.rbc-today {
+.theater .rbc-today {
 	background-color: inherit !important;
 }
 
-.rbc-header {
+.theater .rbc-header {
 	border: 1px solid #faff00;
 }
 
-.rbc-header>span[role="columnheader"] {
+.theater .rbc-header>span[role="columnheader"] {
 	color: #faff00 !important;
 	font-weight: bold;
 	text-transform: uppercase;
 }
 
-.rbc-day-bg {
+.theater .rbc-day-bg {
 	border: 1px solid #faff00;
 }
 
-.left-column {
+.theater .left-column {
 	display: flex;
 	flex-direction: column;
 	text-align: center;
@@ -97,7 +97,7 @@
 	margin: auto;
 }
 
-.arrow-button {
+.theater .arrow-button {
 	background: none;
 	border: none;
 	cursor: pointer;
@@ -111,7 +111,7 @@
 	background-color: #333;
 }
 
-.top-left-month {
+.theater .top-left-month {
 	color: #faff00;
 	font-size: 36px;
 	font-weight: bold;
@@ -123,12 +123,12 @@
 	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.rbc-event {
+.theater .rbc-event {
 	background-color: #faff00 !important;
 	cursor: default !important;
 }
 
-.rbc-show-more {
+.theater .rbc-show-more {
 	background: none !important;
 	cursor: default !important;
 }
